# rust-01-rcli

./: Cargo.toml  README.md  cliff.toml  deny.toml
fuxtures/: b64.txt
src/: cli.rs  lib.rs  main.rs  opts.rs  process.rs
src/cli/: base64.rs  csv_opts.rs  genpass_opts.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs
