[package]
name = "rcli"
authors = ["mengaily <zhu91aizhu@163.com>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.5.3", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_yaml = "0.9.34"
zxcvbn = "3.1.0"
